Fix video size on small screens

--- a/style.scss
+++ b/style.scss
@@ -118,7 +118,7 @@ strong, b {
     font-weight: bold;
 }
 
-img {
+img, video {
     max-width: 100%;
 }
 
